@@ -236,6 +236,9 @@ Release 2.8.0 - UNRELEASED
     YARN-4082. Container shouldn't be killed when node's label updated.
     (Wangda Tan via vvasudev)
 
+    YARN-3885. ProportionalCapacityPreemptionPolicy doesn't preempt if queue is 
+    more than 2 level. (Ajith S via wangda)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
